# src/routes/products.routes.js
@@ -1,11 +1,6 @@
 import {
-  createUser,
-  findAll,
-  findOne,
-  updateUser,
-  deactivateUser,
-  changePassword,
-} from "../controllers/users.controllers.js";
+  ShowAllProducts, ShowProductById, updateProduct, deleteProduct, createProduct
+} from "../controllers/product.controller.js";
 import { isLogin } from "../middlewares/auth.middlewares.js";
 import { isSuperAdmin } from "../middlewares/roles.middlewares.js";
 
@@ -17,9 +12,13 @@ import headers from "../services/headers.services.js";
 const productsRoutes = (app) => {
   app.use(headers);
 
-  r;
+  router.get("/product", ShowAllProducts);
+  router.get("/product:id", ShowProductById);
+  router.post("/product", createProduct,isSuperAdmin,isLogin);
+  router.put("/product:id", updateProduct,isSuperAdmin,isLogin);
+  router.delete("product/:id", deleteProduct,isSuperAdmin,isLogin);
 
-  app.use("/api/users", router);
+  app.use("/api/", router);
 };
 
 export default productsRoutes;
